services/sample/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  labels:
    app: sample
spec:
  selector:
    app: sample
  ports:
    - name: http
      appProtocol: kubernetes.io/h2c
      protocol: TCP
      port: 80
      targetPort: http
