services/sample/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample
spec:
  parentRefs:
    - name: drn-project
      sectionName: web
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /app
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Prefix
                value: /app
            remove:
              - Forwarded
              - l5d-dst-override
              - l5d-retry-http
              - l5d-retry-grpc
              - l5d-retry-limit
              - l5d-retry-timeout
              - l5d-timeout
              - l5d-response-timeout
              - X-Forwarded-Ssl
              - X-Original-URI
              - X-Forwarded-Path
      backendRefs:
        - name: sample
          port: 80
